feat: add all company routes with basic logic
